--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "@slack/client": "^4.8.0"
+    "@slack/client": "^4.8.0",
+    "axios": "^0.18.0"
   },
   "devDependencies": {
     "prettier": "^1.15.3"
